// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computes variable value 1`] = `
Object {
  "esm/index.js": "export const global_BackgroundColor_100 = {\\"name\\":\\"--pf-global--BackgroundColor--100\\",\\"value\\":\\"#fff\\",\\"var\\":\\"var(--pf-global--BackgroundColor--100)\\"}
export const c_button_BackgroundColor = {\\"name\\":\\"--pf-c-button--BackgroundColor\\",\\"value\\":\\"#fff\\",\\"var\\":\\"var(--pf-c-button--BackgroundColor)\\"}
",
  "js/index.d.ts": "export const global_BackgroundColor_100: { \\"name\\": \\"--pf-global--BackgroundColor--100\\"; \\"value\\": \\"#fff\\"; \\"var\\": \\"var(--pf-global--BackgroundColor--100)\\"; }
export const c_button_BackgroundColor: { \\"name\\": \\"--pf-c-button--BackgroundColor\\"; \\"value\\": \\"#fff\\"; \\"var\\": \\"var(--pf-c-button--BackgroundColor)\\"; }
",
  "js/index.js": "module.exports.global_BackgroundColor_100 = {\\"name\\":\\"--pf-global--BackgroundColor--100\\",\\"value\\":\\"#fff\\",\\"var\\":\\"var(--pf-global--BackgroundColor--100)\\"}
module.exports.c_button_BackgroundColor = {\\"name\\":\\"--pf-c-button--BackgroundColor\\",\\"value\\":\\"#fff\\",\\"var\\":\\"var(--pf-c-button--BackgroundColor)\\"}
",
}
`;

exports[`it generates token from class selector with value 1`] = `
Object {
  "esm/index.js": "export const c_button_BackgroundColor = {\\"name\\":\\"--pf-c-button--BackgroundColor\\",\\"value\\":\\"#fff\\",\\"var\\":\\"var(--pf-c-button--BackgroundColor)\\"}
",
  "js/index.d.ts": "export const c_button_BackgroundColor: { \\"name\\": \\"--pf-c-button--BackgroundColor\\"; \\"value\\": \\"#fff\\"; \\"var\\": \\"var(--pf-c-button--BackgroundColor)\\"; }
",
  "js/index.js": "module.exports.c_button_BackgroundColor = {\\"name\\":\\"--pf-c-button--BackgroundColor\\",\\"value\\":\\"#fff\\",\\"var\\":\\"var(--pf-c-button--BackgroundColor)\\"}
",
}
`;

exports[`it generates token from root selector with value 1`] = `
Object {
  "esm/index.js": "export const global_BackgroundColor_100 = {\\"name\\":\\"--pf-global--BackgroundColor--100\\",\\"value\\":\\"#fff\\",\\"var\\":\\"var(--pf-global--BackgroundColor--100)\\"}
",
  "js/index.d.ts": "export const global_BackgroundColor_100: { \\"name\\": \\"--pf-global--BackgroundColor--100\\"; \\"value\\": \\"#fff\\"; \\"var\\": \\"var(--pf-global--BackgroundColor--100)\\"; }
",
  "js/index.js": "module.exports.global_BackgroundColor_100 = {\\"name\\":\\"--pf-global--BackgroundColor--100\\",\\"value\\":\\"#fff\\",\\"var\\":\\"var(--pf-global--BackgroundColor--100)\\"}
",
}
`;

exports[`keeps variable reference if computing fails 1`] = `
Object {
  "esm/index.js": "export const c_button_BackgroundColor = {\\"name\\":\\"--pf-c-button--BackgroundColor\\",\\"value\\":\\"var(--pf-global--BackgroundColor--100)\\",\\"var\\":\\"var(--pf-c-button--BackgroundColor)\\"}
",
  "js/index.d.ts": "export const c_button_BackgroundColor: { \\"name\\": \\"--pf-c-button--BackgroundColor\\"; \\"value\\": \\"var(--pf-global--BackgroundColor--100)\\"; \\"var\\": \\"var(--pf-c-button--BackgroundColor)\\"; }
",
  "js/index.js": "module.exports.c_button_BackgroundColor = {\\"name\\":\\"--pf-c-button--BackgroundColor\\",\\"value\\":\\"var(--pf-global--BackgroundColor--100)\\",\\"var\\":\\"var(--pf-c-button--BackgroundColor)\\"}
",
}
`;
